--- a/report/exactPlanar.tex
+++ b/report/exactPlanar.tex
@@ -83,7 +83,7 @@ in linear time \cite{motwani2010randomized}\cite{mulmuley1987matching}. We also 
 the graph is triangulated, which we can do by adding edges with infinite length.\
 
 \subsubsection{The data structure}
-Given the directed graph $G$ and a number of labels $\ell$ with
+Given the directed planar graph $G$ with non-negative edge length and a number of labels $\ell$ with
 $\varepsilon_1 = O(\sqrt{n})$ and $\varepsilon_2=O(\text{polylog}(n))$, we divide our
 data structure into the following two cases: \\
 \\
