--- a/report/techniques.tex
+++ b/report/techniques.tex
@@ -126,6 +126,7 @@ the set of $(p(v), v)$. This problem has a famous $O(m+n)$ solution for a $m$ by
 
 \begin{figure}
   \centering
+  \caption{}
   \begin{subfigure}[b]{0.45\textwidth}
     \includegraphics[width=\textwidth]{figs/monge.pdf}
     \caption{Illustration of the Monge property in planar graphs. The sum of the distances
@@ -175,8 +176,9 @@ We can implement \texttt{findMin()} in $O(1)$ time, \texttt{extractMin()} in amo
 $O(\lg \sqrt{r})$ time and \texttt{scanInPiece(v,d)} in amortized $O(\lg^2 \sqrt{r})$
 time \cite{fakcharoenphol2006planar}.
 
-\begin{figure}
+\begin{figure}[h!]
   \centering
+  \caption{}
   \begin{subfigure}[b]{0.45\textwidth}
     \includegraphics[width=\textwidth]{figs/mongesubgraph.pdf}
     \caption{A decomposition of a DDG into bipartite graphs. The black circles are
@@ -258,6 +260,7 @@ vertices of the primal graph which all belong to different sites in the Voronoi 
 $VD$. Figure \ref{awvd1} and \ref{awvd2} illustrates this for a hole $h$. \\
 \begin{figure}
   \centering
+  \caption{}
   \begin{subfigure}[b]{0.45\textwidth}
     \includegraphics[width=\textwidth]{figs/awvd1.pdf}
     \caption{Illustration of an additively weighted Voronoi diagram $VD(u,h)$. The hole
