--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,3 +1,16 @@
 \begin{abstract}
-  Victory text.
+  Previous work for distance oracles in directed vertex-labeled planar graphs all approximate distances, while
+  very little research has been done in the case of exact distance oracles. However, exact distance oracles in
+  the general planar case have been studied and a recent breakthrough by Cohen et al.
+  \cite{cohen2017fast} managed to obtain polylogarithmic query times with truly
+  subquadratic space. This thesis aims to match these trade-offs for the harder
+  vertex-labeled problem in directed planar graphs. \\
+  We give an oracle in a static graph of space $O(n\ell^{2/3})$ with query time $O(\ell^{1/3})$ for the
+  number of labels $\ell$. Another result in the static case applies the novel point
+  location in weighted Voronoi diagram using $O(n^{3/2})$ space and with
+  $O(\text{polylog}(n))$ query time under an assumption on the distribution of the label
+  set $L$. We also show how to extend this oracle to support label changes in expected $O(1)$ time. \\
+  Lastly, we give an oracle for the dynamic case. The result matches the update time of
+  FR-Djikstra \cite{fakcharoenphol2006planar} of $\tilde{O}(n^{2/3})$ extended to also
+  support edge insertions and deletions, but with a slightly worse query time.
 \end{abstract}
