--- a/forsvar/forsvar.tex
+++ b/forsvar/forsvar.tex
@@ -30,4 +30,102 @@
 
 % New page
 
+\section{Results}
+\frame{\frametitle{Results}
+
+  \begin{block}{Theorem 1}
+    \small
+    There is a distance oracle with space $O(n\ell^{2/3})$, query time $O(\ell^{1/3})$
+    and preprocessing time $\tilde{O}(n\ell^{2/3})$.
+  \end{block}
+  \begin{block}{Theorem 2}
+    \small
+    Under the assumption that $G$ does not have $\omega(\sqrt{n})$ labels of polynomial
+    size, there is a distance oracle with space $O(n^{3/2})$, query time
+    $O(\text{polylog}(n))$ and preprocessing time $\tilde{O}(n^{3/2})$. Furthermore, it
+    can handle labels changes in expected $O(1)$ time.
+  \end{block}
+  \begin{block}{Theorem 3}
+    \small
+    There is a distance oracle that can handle edge-weight changes, edge insertions and
+    deletion in amortized $O(n^{2/3}\lg^{5/3} n)$ time. It can be constructed using
+    $O(n\lg n)$ space in $O(n\lg n)$ time, and answers queries in
+    $\tilde{O}(\min\{\text{size}(\lambda)\cdot n^{2/3}, n\})$ time.
+  \end{block}
+
+}
+
+% New page |||||| First oracle
+
+\section{Warm-up: An oracle depending on $\ell$}
+\frame{\frametitle{Warm-up: An oracle depending on $\ell$}
+
+  \begin{block}{Theorem 1}
+    \small
+    There is a distance oracle with space $O(n\ell^{2/3})$, query time $O(\ell^{1/3})$
+    and preprocessing time $\tilde{O}(n\ell^{2/3})$.
+  \end{block}
+
+\begin{columns}[c]
+  \column{10cm}
+  \begin{itemize}
+    \item Built on top of an $r$-division.
+    \item Store shortest paths to all labels from \textit{boundary vertices}.
+    \item Store shortest paths from all \textit{interior vertices} to all labels in the
+      same piece.
+  \end{itemize}
+\end{columns}
+
+}
+
+% New page
+
+\section{The $r$-division}
+\frame{\frametitle{The $r$-division}
+
+  dkposad
+
+}
+
+% New page
+
+\section{The oracle}
+\frame{\frametitle{The oracle}
+
+  dkposad
+
+}
+
+% New page |||||| Second oracle
+
+\section{An oracle with better query times}
+\frame{\frametitle{An oracle with better query times}
+
+  \begin{block}{Theorem 2}
+    \small
+    Under the assumption that $G$ does not have $\omega(\sqrt{n})$ labels of polynomial
+    size, there is a distance oracle with space $O(n^{3/2})$, query time
+    $O(\text{polylog}(n))$ and preprocessing time $\tilde{O}(n^{3/2})$. Furthermore, it
+    can handle labels changes in expected $O(1)$ time.
+  \end{block}
+
+\begin{columns}[c]
+  \column{10cm}
+  \begin{itemize}
+    \item Built on top of an $r$-division.
+    \item Store all shortest paths to and from boundary vertices.
+    \item Store \textit{additiviely weighted Voronoi diagrams} for all vertices $u$ and
+      a constant number of holes $h$.
+    \item Point to point distances in $O(\lg n)$ time using weighted Voronoi diagrams.
+    \item Hash tables to keep track of what vertices have what labels.
+  \end{itemize}
+\end{columns}
+
+}
+
+% New page
+
+
+
+
 \end{document}
