--- a/forsvar/forsvar.tex
+++ b/forsvar/forsvar.tex
@@ -292,6 +292,16 @@
 
 % New page
 
+\section{FR-Djikstra}
+\frame{\frametitle{The Dense Distance Graph}
+
+  The dense distance graph (DDG) is the graph where there is an edge between
+  boundary vertices of the same piece $P$ with weight equal to the shortest path in $P$.
+
+}
+
+% New page
+
 \section{The oracle}
 \frame{\frametitle{The oracle}
 
@@ -309,7 +319,7 @@
     Under the assumption that $G$ does not have $\omega(\sqrt{n})$ labels of polynomial
     size, there is a distance oracle with space $O(n^{3/2})$, query time
     $O(\text{polylog}(n))$ and preprocessing time $\tilde{O}(n^{3/2})$. Furthermore, it
-    can handle labels changes in expected $O(1)$ time.
+    can handle label changes in expected $O(1)$ time.
   \end{block}
 
 \begin{columns}[c]
